DEV-1170 fix support button css issue on safari-browser

--- a/src/app/mail/mail-header/mail-header.component.scss
+++ b/src/app/mail/mail-header/mail-header.component.scss
@@ -312,10 +312,6 @@
 
   .icon-button {
     width: 56px;
-
-    i {
-      margin-top: -4px
-    }
   }
 }
 
